[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sounds/Music/main_menu.wav" type="AudioStream" id=1]
[ext_resource path="res://Fonts/Roboto-Regular-Score.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Game.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/background.png" type="Texture" id=5]

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )
GameScene = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="Background" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="SFX" type="HSlider" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = 3.0
margin_right = 81.0
margin_bottom = 19.0
rect_scale = Vector2( 0.5, 0.5 )
min_value = -72.0
max_value = 0.0

[node name="Label" type="Label" parent="Control/SFX"]
margin_top = -12.0
margin_right = 108.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 2 )
text = "SFX Volume"
align = 1
valign = 1

[node name="Music" type="HSlider" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = 17.0
margin_right = 81.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )
min_value = -72.0
max_value = 0.0

[node name="Label" type="Label" parent="Control/Music"]
margin_top = -12.0
margin_right = 108.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Music Volume"
align = 1
valign = 1

[node name="Play" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -28.0
margin_right = 78.0
margin_bottom = -8.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="Exit" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -16.0
margin_right = 78.0
margin_bottom = 4.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
text = "Exit"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 5.0
autoplay = true
bus = "Music"

[connection signal="value_changed" from="Control/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="value_changed" from="Control/Music" to="." method="_on_Music_value_changed"]
[connection signal="pressed" from="Control/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_Exit_pressed"]
